--- a/k8s.operator/nginx-operator/config/rbac/role.yaml
+++ b/k8s.operator/nginx-operator/config/rbac/role.yaml
@@ -7,6 +7,25 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+  - ""
+  resources:
+  - deployments
+  - services
+  verbs:
+  - '*'
+- apiGroups:
+  - apps
+  resources:
+  - deployments
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - proxy.example.com
   resources:
   - nginxes
