Fix operator demos.

--- a/k8s.operator/memcached-operator/config/samples/cache_v1alpha1_memcached.yaml
+++ b/k8s.operator/memcached-operator/config/samples/cache_v1alpha1_memcached.yaml
@@ -1,6 +1,12 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: memcached-sample
+---
 apiVersion: cache.example.com/v1alpha1
 kind: Memcached
 metadata:
   name: memcached-sample
+  namespace: memcached-sample
 spec:
-  size: 2
+  size: 1
