--- a/demo.go.new/go1_183_demos/.vscode/settings.json
+++ b/demo.go.new/go1_183_demos/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
-    "window.zoomLevel": 0,
-    "go.inferGopath": false,
-    "go.goroot": "/usr/local/go",
-    "go.gopath": "/Users/jinzheng/Workspaces/.go",
-    "go.testFlags": ["-v", "-count=1"]
+  "window.zoomLevel": 0,
+  "go.inferGopath": false,
+  "go.goroot": "/usr/local/go",
+  "go.gopath": "/Users/jinzheng/Workspaces/.go",
+  "go.testFlags": ["-v", "-count=1"],
+  "go.lintTool": "golangci-lint",
+  "go.lintFlags": ["--fast"]
 }
