Add signature util.

--- a/demo.go.new/go1_1711_demos/.vscode/settings.json
+++ b/demo.go.new/go1_1711_demos/.vscode/settings.json
@@ -5,7 +5,8 @@
     "go.gopath": "/Users/jinzheng/Workspaces/.go",
     "go.testFlags": [
         "-v",
-        "-count=1"
+        "-count=1",
+        "-timeout=15s"
     ],
     "go.lintTool":"golangci-lint",
     "go.lintFlags": [
