Add build tags demo.

--- a/demo.go.new/go1_183_demos/.vscode/settings.json
+++ b/demo.go.new/go1_183_demos/.vscode/settings.json
@@ -3,6 +3,7 @@
   "go.inferGopath": false,
   "go.goroot": "/usr/local/go",
   "go.gopath": "/Users/jinzheng/Workspaces/.go",
+  "go.buildFlags": ["-tags=pro", "-tags=pro,enterprise"],
   "go.testFlags": ["-v", "-count=1"],
   "go.lintTool": "golangci-lint",
   "go.lintFlags": ["--fast"]
