Update json demos.

--- a/demo.go.new/go1_1711_demos/Makefile
+++ b/demo.go.new/go1_1711_demos/Makefile
@@ -1,3 +1,5 @@
+default: debug
+
 lint:
 	@echo "run go lint"
 	@go vet ./...
@@ -5,3 +7,6 @@ lint:
 fmt:
 	@echo "run go format"
 	@go fmt ./...
+
+debug:
+	@go run main.go
