Add go bench test demos.

--- a/demo.go.new/go1_1711_demos/go.test/Makefile
+++ b/demo.go.new/go1_1711_demos/go.test/Makefile
@@ -10,5 +10,6 @@ go-test-fuzz:
 	go test -fuzz=FuzzGetRecord -fuzztime=5s -v
 
 go-test-benchmark:
+	# go test -bench=BenchmarkConv -run=^$ -benchtime=5s -benchmem -v
 	# go test -bench=BenchmarkConvStr2bytes -run=^$ -benchtime=5s -benchmem -v
-	go test -bench=BenchmarkConv -run=^$ -benchtime=5s -benchmem -v
+	go test -bench=BenchmarkUnmarshal -run=^$ -benchtime=5s -benchmem -v
