--- a/demo.go.new/go1_183_demos/.golangci.yaml
+++ b/demo.go.new/go1_183_demos/.golangci.yaml
@@ -23,6 +23,7 @@ linters:
     - staticcheck
     - gosimple
     - exportloopref
+    # - bodyclose
   disable-all: true
 
 issues:
@@ -36,3 +37,6 @@ issues:
     - linters:
         - staticcheck
       text: "SA1019: t.*.TrustedOrg is deprecated: TrustedOrg functionality is deprecated and will be removed in January 2020"
+
+output:
+  sort-results: true
