Add gzip fe page.

--- a/demo.go.new/go1_183_demos/Makefile
+++ b/demo.go.new/go1_183_demos/Makefile
@@ -1,4 +1,9 @@
+build_flag := -ldflags='-extldflags -static' -tags='embed kodo'
+
 default: version
+
+echo:
+	@echo "build flag: $(build_flag)"
 
 version:
 	@go version
