--- a/demo.go.new/go1_183_demos/.vscode/launch.json
+++ b/demo.go.new/go1_183_demos/.vscode/launch.json
@@ -16,7 +16,11 @@
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "${workspaceFolder}"
+      "args": [],
+      "env": {
+        "X-DEBUG": "launch package",
+      },
+      "program": "${workspaceFolder}/middlewares/gin"
     },
     {
       "name": "Attach Local Process",
