Add reflect demo.

--- a/demo.go.new/go1_183_demos/Makefile
+++ b/demo.go.new/go1_183_demos/Makefile
@@ -19,8 +19,8 @@ debug:
 govet:
 	@go vet ./...
 
-delta-golint:
-	@./run.sh delta-golint
+golint-delta:
+	@./run.sh golint-delta
 
 golint:
 	@golangci-lint run -c .golangci.yaml ./...
