Add memory limit for debug.

--- a/demo.go.new/go1_183_demos/Makefile
+++ b/demo.go.new/go1_183_demos/Makefile
@@ -21,7 +21,7 @@ version:
 	@echo "project root: $(shell pwd)"
 
 debug:
-	@go run main.go
+	@GOMEMLIMIT=512MiB go run main.go
 
 govet:
 	@go vet ./...
