Add wrap func util.

--- a/demo.go.new/go1_183_demos/Makefile
+++ b/demo.go.new/go1_183_demos/Makefile
@@ -2,7 +2,8 @@ build_flag := -ldflags='-extldflags -static' -tags='embed kodo'
 
 default: version
 
-echo:
+echo/%:  # example: make echo/all, make echo/go
+	@echo arg=$*
 ifdef build_flag
 	@echo "build flag: $(build_flag)"
 else
