--- a/demo.go.new/go1_183_demos/.vscode/settings.json
+++ b/demo.go.new/go1_183_demos/.vscode/settings.json
@@ -7,5 +7,6 @@
   "go.buildFlags": ["-tags=pro", "-tags=pro,enterprise"],
   "go.testFlags": ["-v", "-count=1"],
   "go.lintTool": "golangci-lint",
-  "go.lintFlags": ["--fast"]
+  "go.lintFlags": ["--fast"],
+  "makefile.configureOnOpen": false
 }
