Init toolexec app.

--- a/demo.go.new/go1_233_demos/Makefile
+++ b/demo.go.new/go1_233_demos/Makefile
@@ -1,3 +1,5 @@
+app-version = v0.0.1
+
 default: version
 
 version:
@@ -5,3 +7,9 @@ version:
 
 env:
 	@go env
+
+build:
+	go build -ldflags="-X 'main.Version=$(app-version)'" main.go
+
+run:
+	go run -ldflags="-X 'main.version=$(app-version)'" main.go
