--- a/demo.go.new/go1_183_demos/.vscode/launch.json
+++ b/demo.go.new/go1_183_demos/.vscode/launch.json
@@ -9,6 +9,9 @@
       "type": "go",
       "request": "launch",
       "mode": "test",
+      "env": {
+        "LOG_LEVEL": "debug"
+      },
       "program": "${workspaceFolder}"
     },
     {
@@ -18,7 +21,8 @@
       "mode": "debug",
       "args": [],
       "env": {
-        "X-DEBUG": "launch package",
+        "LOG_LEVEL": "debug",
+        "X-DEBUG": "launch package"
       },
       "program": "${workspaceFolder}/middlewares/gin"
     },
