--- a/demo.go.new/go1_233_demos/.vscode/launch.json
+++ b/demo.go.new/go1_233_demos/.vscode/launch.json
@@ -16,9 +16,10 @@
       "type": "go",
       "request": "launch",
       "mode": "debug",
+      "cwd": "${workspaceFolder}",
       "args": [],
       "env": {
-        "X-DEBUG": "launch package",
+        "X-DEBUG": "launch package"
       },
       "program": "${workspaceFolder}/middlewares/casbin/httpapp"
     },
