Add go 1.24 demos.

--- a/demo.go.new/go1_233_demos/Makefile
+++ b/demo.go.new/go1_233_demos/Makefile
@@ -1,15 +1,12 @@
-app-version = v0.0.1
+app-version := v0.0.1
 
 default: version
 
 version:
 	@go version
 
-env:
-	@go env
-
 build:
-	go build -ldflags="-X 'main.Version=$(app-version)'" main.go
+	go build -ldflags="-X 'main.AppVersion=$(app-version)'" main.go
 
 run:
-	go run -ldflags="-X 'main.version=$(app-version)'" main.go
+	go run -ldflags="-X 'main.AppVersion=$(app-version)'" main.go
